Remove use of grpc from plugin and connector.